[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Others/DropDownContainer.gd" type="Script" id=1]

[node name="DropDownContainer" type="VBoxContainer"]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="pressGroupBtn" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
toggle_mode = true
text = "Text = groupName"

[node name="GroupContainer" type="VBoxContainer" parent="."]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 24.0

[connection signal="toggled" from="pressGroupBtn" to="." method="_on_pressGroupBtn_toggled"]
